# clawbox

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Clawbox.md  LICENSE  README.md  SECURITY.md  TODO.md  clawkeep-plan.md  cleanup.sh  index.html  install-x64.sh  install.sh  next.config.ts  package-lock.json  package.json  playwright.config.ts  production-server.js  remote_control.md  tsconfig.json  vitest.config.ts  vitest.workspace.ts
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
clawkeep/: .gitignore  README.md  config.toml.example  pyproject.toml
clawkeep/clawkeep/: api.py  cli.py  config.py  crypto.py  daemon.py  openclaw.py  pair.py  passphrase.py  restic.py  restore.py  runner.py  s3.py  state.py  token.py
clawkeep/systemd/: clawkeep-idle.service  clawkeep-idle.timer  clawkeepd.service  clawkeepd.timer
clawkeep/tests/: test_api.py  test_cli.py  test_config.py  test_crypto_passphrase.py  test_openclaw.py  test_restic.py  test_restore.py  test_runner.py  test_s3.py  test_token.py
config/: 49-clawbox-updates.pkla  99-clawbox-avahi-reload  avahi-daemon.conf  clawbox-ap-watchdog.service  clawbox-ap-watchdog.timer  clawbox-ap.service  clawbox-browser.service  clawbox-gateway.service  clawbox-heartbeat.service  clawbox-heartbeat.timer  clawbox-performance.service  clawbox-root-update@.service  clawbox-setup.service  clawbox-sudoers  clawbox-tunnel.service  clawbox-workspace-guide.md  codex-jetson.toml  dnsmasq-captive.conf  dnsmasq-upstream.conf  sudoers-clawbox-ollama
data/: config.json.example
docs/: clawbox-handoff.md  clawkeep-backup-mgmt-spec.md  clawkeep-restic-migration.md
docs-site/: .gitignore  README.md  docs.json  index.mdx  llms.txt  quickstart.mdx
e2e/: browser-vnc.spec.ts  chat-popup.spec.ts  clawkeep-flow.spec.ts  desktop-smoke.spec.ts  (+24 more)
e2e-install/: .env.test.example  .gitignore  05-captive-portal.spec.ts  10-happy-path.spec.ts  10-setup-wizard.spec.ts  15-login-relogin.spec.ts  20-settings.spec.ts  25-desktop-ui.spec.ts  30-files.spec.ts  35-mcp.spec.ts  40-terminal.spec.ts  45-vnc.spec.ts  50-webapps.spec.ts  55-clawkeep.spec.ts  60-app-store.spec.ts  70-browser.spec.ts  75-ollama.spec.ts  80-chat.spec.ts  85-tunnel.spec.ts  90-upgrade-main-to-beta.spec.ts  99-power.spec.ts  Dockerfile  README.md  clawbox-bootstrap.service  docker-compose.test.yml  entrypoint.sh  global-setup.ts  playwright.config.ts  save-image.sh
(+652 files in other folders)
