[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawkeep"
version = "0.1.0"
description = "ClawKeep device-side backup client for ClawBox hardware"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ID Robots", email = "support@openclawhardware.dev" }]
dependencies = [
    "requests>=2.31",
    # Cloud upload + list-objects against R2. Lazy-imported in clawkeep.s3
    # so the rest of the package still imports without it; pinning >=1.34
    # gets the SigV4 fix that matters on Cloudflare R2.
    "boto3>=1.34",
    # Stdlib `tomllib` only exists on 3.11+. Backport for 3.10
    # (Jetson L4T still ships Python 3.10 as system default).
    'tomli>=2.0; python_version < "3.11"',
]

[project.scripts]
clawkeep = "clawkeep.cli:clawkeep_main"
clawkeepd = "clawkeep.cli:clawkeepd_main"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-requests",
]

[tool.setuptools.packages.find]
include = ["clawkeep*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
